Overflow bug fixed

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ html {
 
 body {
   line-height: 1.5;
+  overflow-x: hidden;
 }
 
 a {
